<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.ad_ejercicios_tema_1.MainActivity">

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEj1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnEj2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="28dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnEj2"
        android:onClick="onClick"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnEj2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEj2"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnEj3"
        app:layout_constraintRight_toRightOf="@+id/btnEj3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="28dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnEj3"
        android:onClick="onClick"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnEj3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEj3"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnEj4"
        app:layout_constraintRight_toRightOf="@+id/btnEj4"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="28dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnEj4"
        android:onClick="onClick"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnEj4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEj4"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="133dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="onClick"/>

</android.support.constraint.ConstraintLayout>
